# statsbot

./: .gitignore  Cargo.toml  default.nix  example.json  module.nix  shell.nix
nix/: default.nix  filtered-source.nix  package.nix  pre-commit.nix  rust-analyzer.patch  shell.nix
nix/npins/: sources.json
parser/: Cargo.toml
parser/src/: lib.rs
simple-prometheus/: Cargo.toml
simple-prometheus-derive/: Cargo.toml
simple-prometheus-derive/src/: lib.rs
simple-prometheus/src/: lib.rs
statsbot/: Cargo.toml
statsbot/src/: main.rs  metrics.rs
