[package]
name = "statsbot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
irc = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { version = "1" }
clap = { version = "4", features = ["derive"] }
futures = { version = "0.3" }
env_logger = "0.11"
log = "0.4"
parser = { workspace = true }

[lints]
workspace = true
